--- a/.compilerc
+++ b/.compilerc
@@ -6,7 +6,13 @@
           ["env", { "targets": { "electron": "1.6.0" } }],
           "react"
         ],
-        "plugins": ["transform-async-to-generator", "transform-es2015-classes", "react-hot-loader/babel"],
+        "plugins": [
+          "transform-async-to-generator",
+          "transform-es2015-classes",
+          "transform-react-pug",
+          "transform-react-jsx",
+          "react-hot-loader/babel"
+        ],
         "sourceMaps": "inline"
       }
     },
