--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     }
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "electron-compile": "^6.4.3",
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
